--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "video.js": "^8.17.4"
   }
 }
